--- a/wsArduino-Server/.project
+++ b/wsArduino-Server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>wsArduino-Server</name>
+	<name>wsArduino-SOAP</name>
 	<comment></comment>
 	<projects>
 	</projects>
